--- a/PhotoArt/about1.html
+++ b/PhotoArt/about1.html
@@ -96,7 +96,7 @@
 
 
     <!-- Mission start -->
-    <section class="bg-dark pb-4 pt-5">
+    <section class="bg-dark pb-5 pt-5">
         <div class="container">
           <div class="title text-white text-center">
             <h1 class="fw-bold pt-5 pb-3">About Us</h1>
@@ -118,7 +118,7 @@
     <!-- mission end -->
 
     <!-- Anggota Start -->
-      <section class="bg-dark">
+      <section class="bg-dark pt-5">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
