--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     />
   </head>
   <body>
-    <section class="bg pb-4">
+    <section class="bg pb-4" id="upper">
         <div class="container">
           <div class="title text-white text-center">
             <h1 class="fw-bold pt-5 pb-3">About Me</h1>
@@ -97,18 +97,150 @@
               </p>
             </div>
           </div>
-
-
-
-                          <a href="./index.html" class="btn bg-gradient bg-btn px-4 py-2 rounded-5 icon-link icon-link-hover "
-            ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
-            </svg>Back</svg></a>
-          </div>
       </section>
 
-      <footer class="bg-black text-white text-center p-2">
+
+      <!-- Skill start -->
+      <section class="bg pb-4">
         <div class="container">
+          <div class="title text-white text-center">
+            <h1 class="fw-bold pt-5 pb-3">Skill</h1>
+            <p>Thing That I have Learned</p>
+          </div>
+
+
+          <div class="row">
+            <div class="col-12 col-md-6 col-lg-4 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center  w-75 mx-auto">
+                <img src="./HTML.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">Html</h1>
+                  <p class="card-text text-white">
+                    Saya sudah memahami hal-hal dasar dan yang sekiranya dibutuhkan dalam pembuatan suatu web.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./CSS (2).jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">CSS</h1>
+                  <p class="card-text text-white">
+                    Saya sudah memahami hal-hal dasar dan yang sekiranya dibutuhkan dalam pembuatan suatu web.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./JS.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">Javascript</h1>
+                  <p class="card-text text-white">
+                    Saya baru memahami hal-hal dasar sehingga dalam javascript saya dapat dianggap sebagai pemula.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
+
+            <div class="col-12 col-md-6 col-lg-4 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./creative.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">Berpikir Kreatif</h1>
+                  <p class="card-text text-white">
+                    Saya memiliki kemampuan dalam berpikir kreatif dan menemukan ide-ide penampilan yang menarik
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./BS.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">Bootstrap</h1>
+                  <p class="card-text text-white">
+                    Saya masih dalam proses untuk memahami Bootstrap tetapi saya sudah cukup yakin dapat menggunakan Bootstrap dalam pembuatan web.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./time.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">Manajemen Waktu</h1>
+                  <p class="card-text text-white">
+                    Saya memiliki keahlian dan kemampuan dalam mengatur dan memanajemen waktu dengan baik.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Skill end -->
+
+
+      <!-- Pengalaman start -->
+      <section class="bg pb-4">
+        <div class="container">
+          <div class="title text-white text-center">
+            <h1 class="fw-bold pt-5 pb-3">Pengalaman</h1>
+            <p>Saya belum pernah memiliki pengalaman dalam berorganisasi, <br> namun berikut acara pelatihan yang pernah saya ikuti: </p>
+          </div>
+
+
+          <div class="row pb-5">
+            <div class="col-12">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./revou.jpg" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">RevoU</h1>
+                  <p class="card-text text-white">
+                    Saya pernah mengikuti dan telah menyelesaikan pelatihan gratis 2 minggu RevoU
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 pt-3">
+              <div class="bg-black card d-flex align-items-center justify-content-center card text-center w-75 mx-auto" style="width: 18rem">
+                <img src="./Screenshot 2023-10-21 075709.png" class="card-img-top" alt="..." />
+                <div class="card-body">
+                  <h1 class="text-white">Dicoding</h1>
+                  <p class="card-text text-white">
+                    Saya mengikuti dan dalam proses penyelesaian dari kegiatan Dicoding ini
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <a href="./index.html" class="btn bg-gradient bg-btn px-4 py-2 rounded-5 icon-link icon-link-hover "
+          ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+          </svg>Back</svg></a>
+        </div>
+        </div>
+      </section>
+      <!-- pengalaman end -->
+
+
+
+      <footer class=" text-white text-end p-2 fixed-bottom">
+        <a href="#upper">
+          <i class="fa-sharp fa-solid fa-arrow-up-long bg-info bg-info-1 rounded-circle px-2 py-1 text-white"></i>
+        </a>
+      </footer>
+
+      <footer class="bg-black text-white text-center p-2">
+        <div class="container">          
           <div class="container-fluid">
             <div class="social-icons py-2 fs-3">
                 <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook px-2"></i></a>
