--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
               Saya memiliki minat yang mendalam dalam menjadi seorang Front-End Developer karena saya percaya bahwa antarmuka pengguna (UI) adalah jendela utama bagi pengguna untuk berinteraksi dengan teknologi. Saya tertarik untuk menciptakan pengalaman pengguna yang menarik, responsif, dan mudah digunakan melalui desain tata letak yang estetis dan navigasi yang intuitif.
             </p>
             <div class="text-center">
-            <a class="icon-link icon-link-hover bg-danger text-center justify-content-center rounded px-2 py-1" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="about.html">
+            <a class="icon-link icon-link-hover bg-danger scale-up-center text-center justify-content-center rounded px-2 py-1" style="--bs-link-hover-color-rgb: 25, 135, 84;" href="about.html">
               More
-              <svg class="bi" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
+              <svg class="bi scale-up-center" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"/>
               </svg></svg>
             </a>
