--- a/PhotoArt/about1.html
+++ b/PhotoArt/about1.html
@@ -109,8 +109,13 @@
             <div class="col-12 col-lg-6">
                 <h1 class="fz-bold text-center text-white">Our Mission</h1>
               <p class="text-white" style="text-align: justify">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta impedit accusamus fugiat facere facilis dolore autem neque sint quo id consequatur est fuga dicta, dolorum, dolorem quae blanditiis hic quos rem nostrum? Laudantium magni nulla consequatur delectus, alias qui porro? Eius, voluptatum nihil. Pariatur dicta quas, veritatis voluptates reprehenderit sapiente voluptas! Possimus modi corrupti officiis nostrum quas aliquid hic mollitia incidunt nihil. Dignissimos earum, facilis aperiam atque voluptas quod necessitatibus ipsa nesciunt mollitia, esse repellendus pariatur natus architecto consequatur. Eum, odio! Saepe nulla voluptatem quaerat, ut magni consequatur, sequi error fuga minima quam quis numquam, doloremque dicta quasi placeat deleniti.
+                At PhotoArt, we are passionate about capturing moments and preserving memories through the art of photography. Our mission is to inspire creativity, celebrate diversity, and empower individuals and businesses to tell their unique stories visually. We strive to provide exceptional photography services, innovative products, and valuable educational resources, fostering a community where creativity knows no bounds. At PhotoArt, we believe that every picture tells a unique story. Join us in capturing the beauty of the world, one frame at a time, and let us be the bridge between moments and memories.
               </p>
+              <hr class="text-white">
+              <p class="text-white text-center">
+                Inspire | Create | Capture | Preserve
+              </p>
+              <hr class="text-white">
             </div>
           </div>
         </div>
@@ -126,7 +131,7 @@
                 <img src="./person1.png" class="card-img-top rounded-circle" alt="...">
                 <div class="card-body text-center my-4">
                   <h5 class="card-title">Johan</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Leader</p>
                   <div class="social-icons py-2 fs-3">
                     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook px-2"></i></a>
                     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram px-2"></i></a>
@@ -140,7 +145,7 @@
                 <img src="./person4.png" class="card-img-top rounded-circle" alt="...">
                 <div class="card-body text-center my-4">
                   <h5 class="card-title">Lizbet</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Vice-Leader 1</p>
                   <div class="social-icons py-2 fs-3">
                     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook px-2"></i></a>
                     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram px-2"></i></a>
@@ -154,7 +159,7 @@
                 <img src="./person2.png" class="card-img-top rounded-circle" alt="...">
                 <div class="card-body text-center my-4">
                   <h5 class="card-title">Linda</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Vice-Leader-2</p>
                   <div class="social-icons py-2 fs-3">
                     <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook px-2"></i></a>
                     <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram px-2"></i></a>
