--- a/PhotoArt/services.html
+++ b/PhotoArt/services.html
@@ -108,8 +108,7 @@
                     <div class="card-body">
                       <h1 class="text-white">Camera</h1>
                       <p class="card-text text-white">
-                        Some quick example text to build on the card title and make up
-                        the bulk of the card's content.
+                        Give you the best photography
                       </p>
                     </div>
                 </div>
@@ -120,8 +119,7 @@
                     <div class="card-body">
                       <h1 class="text-white">Wedding</h1>
                       <p class="card-text text-white">
-                        Some quick example text to build on the card title and make up
-                        the bulk of the card's content.
+                        Give you the best Wedding photo
                       </p>
                     </div>
                   </div>
@@ -132,8 +130,7 @@
                     <div class="card-body">
                       <h1 class="text-white">Portrait</h1>
                       <p class="card-text text-white">
-                        Some quick example text to build on the card title and make up
-                        the bulk of the card's content.
+                        Give you the best self photography
                       </p>
                     </div>
                   </div>
@@ -144,8 +141,7 @@
                     <div class="card-body">
                       <h1 class="text-white">Travel</h1>
                       <p class="card-text text-white">
-                        Some quick example text to build on the card title and make up
-                        the bulk of the card's content.
+                        Give you the best photo when you travel
                       </p>
                     </div>
                   </div>
@@ -156,8 +152,7 @@
                     <div class="card-body">
                       <h1 class="text-white">Editing</h1>
                       <p class="card-text text-white">
-                        Some quick example text to build on the card title and make up
-                        the bulk of the card's content.
+                        Give you the best photo and video editing
                       </p>
                     </div>
                   </div>
@@ -168,8 +163,7 @@
                     <div class="card-body">
                       <h1 class="text-white">Animal</h1>
                       <p class="card-text text-white">
-                        Some quick example text to build on the card title and make up
-                        the bulk of the card's content.
+                        Give you the best animal photo from all world
                       </p>
                     </div>
                   </div>
