--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <!-- Hero End -->
 
     <!-- About Start -->
-    <section id="about" class="bg">
+    <section id="about" class="bg pb-5">
       <div class="container">
         <div class="title text-white text-center">
           <h1 class="fw-bold pt-5 pb-3">About Me</h1>
